# wyag

./: .gitignore  CMakeLists.txt  LICENSE  Makefile  README.md
include/: INIReader.h
include/wyag/: branch.hpp  cli.hpp  git_objects.hpp  git_repository.hpp  ignore.hpp  index.hpp  init.hpp  kvlm.hpp  ref.hpp  tree.hpp  utils.hpp
src/: add.cpp  branch.cpp  catfile.cpp  checkignore.cpp  checkout.cpp  commit.cpp  git_objects.cpp  git_repository.cpp  hashfile.cpp  ignore.cpp  index.cpp  init.cpp  kvlm.cpp  log.cpp  lsfiles.cpp  lstree.cpp  main.cpp  ref.cpp  revparse.cpp  rm.cpp  showref.cpp  status.cpp  tag.cpp  tree.cpp  utils.cpp
